# MAS_Gerador_Artigos

./: README.md  pyproject.toml  pytest.ini  report.md  requirements.txt
knowledge/: user_preference.txt
src/criador_artigo_web/: api.py  crew.py  main.py
src/criador_artigo_web/config/: agents.yaml  tasks.yaml
src/criador_artigo_web/models/: output_model.py
src/criador_artigo_web/tools/: output_tool.py  wiki_tool.py
src/tests/: test_wiki_tool.py
